[package]
name = "nuclerust"
version = "0.1.0"
authors = ["kmasatany"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
#bit_field = "0.7.0"
#bitflags = "0.9.1"
#multiboot2 = "0.1.0"
#once = "0.3.2"
#x86_64 = "0.1.2"

#[dependencies.hole_list_allocator]
#path = "libs/hole_list_allocator"

#[dependencies.lazy_static]
#features = ["spin_no_std"]
#version = "0.2.1"